2006-05-29  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m (FcFontEnumerator
	-defaultSystemFontName, -defaultBoldSystemFontName,
	-defaultFixedPitchFontName): Added this methods which return
	values similar to the art and cairo backend.
	Removed compiler warnings from this file.
	* Source/xlib/XGFontSetFontInfo.m (-dealloc): Call super dealloc.
	* Source/xlib/XGGeometry.m
	* Source/xlib/XGFont.m
	* Source/xlib/XGGState.m:
	* Tools/font_cacher.m:
	Removed compiler warnings. 

2006-05-27  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_DPSsetcursor::): Don't set cursor
	on root window. Patch by Mircea Trache <aer@shaw.ca>.

2006-05-13  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/x11/XGServer.h,
	* Source/x11/XGServerWindow.m (-_XFrameToXHints:for:): New method to
	compute X hints directly from X frame. Previously the X frame
	was converted to an OS frame and from this the X hints were computed.
	* Source/x11/XGServerWindow.m, Source/x11/XGServerEvent.m:
	Replaced all usages of [_OSFrameToXHints:for:] with [_XFrameToXHints:for:].
	
2006-05-04  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-styleoffsets::::::): New method to
	compute window frame offset based on the _NET_FRAME_EXTENTS or
	_KDE_NET_WM_FRAME_STRUT property. This is based on a slightly
	extended patch by Yen-Ju Chen <yjchenx@hotmail.com>.
	Call this new method from [styleoffsets:::::] and [_OSFrameToXHints:].
	* Source/x11/XGServerWindow.m (-iconTileImage): Make sure the
	window pointer gets freed.

2006-05-03  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-nativeWindow:::::): Implemented to
	support using an X window for GNUstep drawing.

2006-04-30  David Ayers  <d.ayers@inode.at>

	* Source/x11/raster.c (RCreateImage): Remove unused variables.

	* Source/x11/XGServerEvent.m (gotShmCompletion:) Declare privat
	interface for shared memory handling.
	
2006-03-13  Adam Fedor  <fedor@gnu.org>
